[project]
name = "phoneagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.10.6",
    "openai>=1.97.1",
    "requests>=2.32.4",
    "numpy>=1.24.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
]
